<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="406dp"
        android:layout_height="535dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,16:10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.0"
        app:srcCompat="@drawable/front" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/jost"
        android:gravity="center"
        android:text="@string/welcome_to_wheely_your_app_that_will_accompany_you_in_your_daily_life"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/jost_it"
        android:gravity="center"
        android:text="@string/description_app"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blue2"
        android:text="@string/start_button_text"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintWidth_percent="0.6" />

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/active_dot" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/inactive_dot" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/inactive_dot" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/inactive_dot" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/inactive_dot" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>